# sos-platform-tool

./: .gitignore  40KREADME.md  Cargo.toml  README.md
.github/workflows/: rust.yml
release_folder/: sos-platform-tool_name-macos
src/: cli.rs  docker.rs  file_ops.rs  main.rs  messages.rs  processor.rs  sos_platform_tool_config.rs  utils.rs
test-structure/: values.yaml
test-structure/generate-secrets/: decrypt.bat  dev1-generate-sealed-secrets.yml  encrypt.bat
test-structure/generate-secrets/input/: application-deployment-app-properties.yaml  case-portal-service-app-properties.yaml  communication-service-app-properties.yaml  consent-consumer-app-properties.yaml  drschmerzen-app-properties.yaml  myhealth-service-app-properties.yaml  one-time-links-controller-app-properties.yaml  rhos_dev1_com_dbo.ktab  rhos_dev1_cps_dbo.ktab  rhos_dev1_myh_dbo.ktab  rhos_dev1_otl_dbo.ktab  rhos_dev1_tmc.ktab  rhos_dev1_vmc.ktab  sos-microservice-generator-app-properties.yaml  teams-meetings-controller-app-properties.yaml  tokenization-service-app-properties.yaml  video-meetings-consumer-app-properties.yaml
test-structure/healthcare-journey-dev1/: Chart.yaml  values.yaml
test-structure/healthcare-journey-dev1/dashboards/: team-journey-red.json  video-meetings-consumer-grafana-dashboard.json
test-structure/healthcare-journey-dev1/templates/: app.yaml  application-deployment-app-properties-sealed-secret.json  case-portal-service-app-properties-sealed-secret.json  communication-service-app-properties-sealed-secret.json  consent-consumer-app-properties-sealed-secret.json  (+15 more)
