[package]
name = "sos-platform-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
