[package]
name = "sos-platform-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
colored = "2.1.0"
glob = "0.3.1"
